--- a/views/reader.html
+++ b/views/reader.html
@@ -15,6 +15,9 @@
     <script src="/js/ejs_production.js" type="text/javascript"></script>
 
     <script src="/js/home.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        var g_story_id = <%= story_id %>;
+    </script>
 </head>
 <body>
     <h1>bluewell</h1>
