--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -1,3 +1,31 @@
 
 body {
+    margin: 0;
+    padding: 0;
+}
+
+#story_body {
+    padding: 10px;
+    height: 520px;
+    overflow: hidden;
+    
+    h1 {
+        text-align: center;
+    }
+    h2 {
+        text-align: center;
+    }
+    .authors {
+        text-align: center;
+        .by {
+            font-weight: bold;
+        }
+    }
+    
+    .text {
+        p {
+            text-indent: 10px;
+            text-align: justify;
+        }
+    }
 }
