--- a/views/reader.html
+++ b/views/reader.html
@@ -2,24 +2,43 @@
 <html>
 <head>
     <title>bluewell</title>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
     <!--[if lt IE 9]>
      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     
-    <link href="/css/home.css" rel="stylesheet" type="text/css" />
+    
+    <link href="/css/reader.css" rel="stylesheet" type="text/css" />
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/js/string.utils.js" type="text/javascript"></script>
-    <script src="/js/ejs_production.js" type="text/javascript"></script>
 
-    <script src="/js/home.js" type="text/javascript"></script>
+    <script src="/js/reader.js" type="text/javascript"></script>
     <script type="text/javascript">
         var g_story_id = <%= story_id %>;
     </script>
 </head>
 <body>
-    <h1>bluewell</h1>
+    <div id='story_body'>
+    </div>
+    <div id='left_click'>
+    </div>
+    <div id='center_click'>
+    </div>
+    <div id='right_click'>
+    </div>
+    <div id='top_bar'>
+    </div>
+    <div id='bottom_bar'>
+        <div class='icon_bar'>
+        </div>
+        <div class='tracker_bar'>
+        </div>
+    </div>
 </body>
 </html>
