--- a/views/reader.html
+++ b/views/reader.html
@@ -26,12 +26,9 @@
 <body>
     <div id='story_body'>
     </div>
-    <div id='left_click'>
-    </div>
-    <div id='center_click'>
-    </div>
-    <div id='right_click'>
-    </div>
+    <div id='left_click' onclick="clickReaderLeft();"></div>
+    <div id='center_click' onclick="clickReaderCenter();"></div>
+    <div id='right_click' onclick="clickReaderRight();"></div>
     <div id='top_bar'>
     </div>
     <div id='bottom_bar'>
