--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -5,27 +5,60 @@ body {
 }
 
 #story_body {
-    padding: 10px;
-    height: 520px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 440px;
     overflow: hidden;
     
-    h1 {
-        text-align: center;
-    }
-    h2 {
-        text-align: center;
-    }
-    .authors {
-        text-align: center;
-        .by {
-            font-weight: bold;
+    .story_header {
+        padding-bottom: 10px;
+        
+        h1 {
+            text-align: center;
+        }
+        h2 {
+            text-align: center;
+        }
+        .authors {
+            text-align: center;
+            .by {
+                font-weight: bold;
+            }
         }
     }
     
     .text {
         p {
+            margin-top: 0px;
+            margin-bottom: 0px;
             text-indent: 10px;
             text-align: justify;
         }
     }
+}
+
+#left_click {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    bottom: 0px;
+    width: 32%;
+}
+#center_click {
+    position: fixed;
+    left: 33%;
+    top: 0px;
+    bottom: 0px;
+    width: 35%;
+}
+#right_click {
+    position: fixed;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    width: 32%;
 }
