no flashy flashy

--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -47,6 +47,7 @@ body {
     top: 0px;
     bottom: 0px;
     width: 32%;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 #center_click {
     position: fixed;
@@ -54,6 +55,7 @@ body {
     top: 0px;
     bottom: 0px;
     width: 35%;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 #right_click {
     position: fixed;
@@ -61,4 +63,5 @@ body {
     top: 0px;
     bottom: 0px;
     width: 32%;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
