--- a/views/reader.html
+++ b/views/reader.html
@@ -33,8 +33,56 @@
     </div>
     <div id='bottom_bar'>
         <div class='icon_bar'>
+            <div class='icon text_settings' onclick='clickTextSettings();'><div class='text'>Aa</div></div>
+            <div class='icon rate'><div class='text'>R</div></div>
+            <div class='icon highlights'><div class='text'>H</div></div>
+            <div class='icon settings'><div class='text'>S</div></div>
         </div>
         <div class='tracker_bar'>
+        </div>
+    </div>
+    <div id='text_settings'>
+        <div class='font_size'>
+            <div class='button smaller'>
+                <div class='text'>Aa</div>
+                <div class='arrow'></div>
+            </div>
+            <div class='button larger'>
+                <div class='text'>Aa</div>
+                <div class='arrow'></div>
+            </div>
+        </div>
+        <div class='theme'>
+            <div class='item standard'>
+                <div class='outer'>
+                    <div class='inner'></div>
+                </div>
+                <div class='label'>Standard</div>
+            </div>
+            <div class='item standard'>
+                <div class='outer'>
+                    <div class='inner'></div>
+                </div>
+                <div class='label'>Standard</div>
+            </div>
+            <div class='item standard'>
+                <div class='outer'>
+                    <div class='inner'></div>
+                </div>
+                <div class='label'>Helvetica</div>
+            </div>
+            <div class='item standard'>
+                <div class='outer'>
+                    <div class='inner'></div>
+                </div>
+                <div class='label'>Baskerville</div>
+            </div>
+            <div class='item standard'>
+                <div class='outer'>
+                    <div class='inner'></div>
+                </div>
+                <div class='label'>Palatino</div>
+            </div>
         </div>
     </div>
 </body>
