--- a/views/reader.html
+++ b/views/reader.html
@@ -43,11 +43,11 @@
     </div>
     <div id='text_settings'>
         <div class='font_size'>
-            <div class='button smaller'>
+            <div class='button smaller' onclick='clickFontSmaller();'>
                 <div class='text'>Aa</div>
                 <div class='arrow'></div>
             </div>
-            <div class='button larger'>
+            <div class='button larger' onclick='clickFontLarger();'>
                 <div class='text'>Aa</div>
                 <div class='arrow'></div>
             </div>
