--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -119,6 +119,13 @@ body {
     height: 167px;
     background: whitesmoke;
     
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    
     .font_size {
         height: 57px;
         font-size: 0px;
