--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -16,16 +16,21 @@ body {
     font-size: 16px;
     
     .story_header {
-        padding-bottom: 10px;
-        
         h1 {
+            margin: 0px;
+            padding-top: 20px;
+            padding-bottom: 20px;
             text-align: center;
         }
         h2 {
+            margin: 0px;
+            padding-top: 10px;
+            padding-bottom: 10px;
             text-align: center;
         }
         .authors {
             text-align: center;
+            padding-bottom: 10px;
             .by {
                 font-weight: bold;
             }
