--- a/views/reader.html
+++ b/views/reader.html
@@ -52,36 +52,46 @@
                 <div class='arrow'></div>
             </div>
         </div>
-        <div class='theme'>
-            <div class='item standard'>
+        <div class='themes'>
+            <div class='item theme_standard active' onclick="clickTheme('theme_standard');">
                 <div class='outer'>
-                    <div class='inner'></div>
+                    <div class='inner'>
+                        <img src="/images/theme_standard.jpg"/>
+                    </div>
                 </div>
                 <div class='label'>Standard</div>
             </div>
-            <div class='item standard'>
+            <div class='item theme_helvetica' onclick="clickTheme('theme_helvetica');">
                 <div class='outer'>
-                    <div class='inner'></div>
-                </div>
-                <div class='label'>Standard</div>
-            </div>
-            <div class='item standard'>
-                <div class='outer'>
-                    <div class='inner'></div>
+                    <div class='inner'>
+                        <img src="/images/theme_standard.jpg"/>
+                    </div>
                 </div>
                 <div class='label'>Helvetica</div>
             </div>
-            <div class='item standard'>
+            <div class='item theme_baskerville' onclick="clickTheme('theme_baskerville');">
                 <div class='outer'>
-                    <div class='inner'></div>
+                    <div class='inner'>
+                        <img src="/images/theme_standard.jpg"/>
+                    </div>
                 </div>
                 <div class='label'>Baskerville</div>
             </div>
-            <div class='item standard'>
+            <div class='item theme_palatino' onclick="clickTheme('theme_palatino');">
                 <div class='outer'>
-                    <div class='inner'></div>
+                    <div class='inner'>
+                        <img src="/images/theme_standard.jpg"/>
+                    </div>
                 </div>
                 <div class='label'>Palatino</div>
+            </div>
+            <div class='item theme_midnight' onclick="clickTheme('theme_midnight');">
+                <div class='outer'>
+                    <div class='inner'>
+                        <img src="/images/theme_standard.jpg"/>
+                    </div>
+                </div>
+                <div class='label'>Midnight</div>
             </div>
         </div>
     </div>
