--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -208,7 +208,7 @@ body {
                 margin-right: auto;
                 width: 66px;
                 height: 66px;
-                border-radius: 66px;
+                border-radius: 50%;
                 border: 1px solid whitesmoke;
                 
                 .inner {
@@ -216,13 +216,11 @@ body {
                     margin-left: 3px;
                     width: 60px;
                     height: 60px;
-                    border-radius: 60px;
+                    border-radius: 50%;
                     overflow: hidden;
                     
                     img {
                         width: 60px;
-                        border-radius: 60px;
-                        overflow: hidden;
                     }
                 }
             }
