--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -4,16 +4,26 @@ body {
     padding: 0;
 }
 
+#story_body_container {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 10px;
+    right: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 #story_body {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-left: 10px;
-    padding-right: 10px;
+    position: absolute;
+    left: 0px;
+    padding: 0px;
     margin-top: 10px;
     margin-bottom: 10px;
     height: 440px;
+    width: 100%;
     overflow: hidden;
     font-size: 14px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
     
     .story_header {
         h1 {
