--- a/views/reader.html
+++ b/views/reader.html
@@ -46,8 +46,8 @@
             </div>
             <div class='fast_forward'  onclick='readerFastForward();'>
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="39px" height="42px" viewBox="0 0 39 42" enable-background="new 0 0 39 42" xml:space="preserve">
-                    <path fill="#157DFB" d="m20.510004,41.02l1.97917,-2.182011l-18.338011,-18.199438l18.402267,-18.402303l-2.04343,-2.236249l-16.41,16.41l-4.1,4.099998l4.1,4.1c0,0 0,0 0,0" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" id="svg_1"/>
-                    <path id="svg_2" fill="#157DFB" d="m36.533291,41.020004l1.979168,-2.182011l-18.338009,-18.199442l18.402267,-18.402302l-2.04343,-2.236249l-16.41,16.409999l-4.1,4.099998l4.1,4.1c0,0 0,0 0,0" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null"/>
+                    <path fill="#157DFB" d="m20.510004,41.02l1.97917,-2.182011l-18.338011,-18.199438l18.402267,-18.402303l-2.04343,-2.236249l-16.41,16.41l-4.1,4.099998l4.1,4.1c0,0 0,0 0,0" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" />
+                    <path fill="#157DFB" d="m36.533291,41.020004l1.979168,-2.182011l-18.338009,-18.199442l18.402267,-18.402302l-2.04343,-2.236249l-16.41,16.409999l-4.1,4.099998l4.1,4.1c0,0 0,0 0,0" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null"/>
                 </svg>
             </div>
         </div>
