--- a/views/home.html
+++ b/views/home.html
@@ -17,6 +17,12 @@
     <script type="text/javascript">
         var g_session_key = "<%=session_key%>";
     </script>
+    <script type="text/javascript">
+        if( window.location.hash == '#_=_' )
+        {
+            window.location.hash = '';
+        }
+    </script>
 </head>
 <body>
     <h1>Home</h1>
