--- a/views/waitlist.html
+++ b/views/waitlist.html
@@ -14,6 +14,12 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/js/string.utils.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        if( window.location.hash == '#_=_' )
+        {
+            window.location.hash = '';
+        }
+    </script>
 </head>
 <body>
     <h1>Thanks!</h1>
