--- a/views/home.html
+++ b/views/home.html
@@ -10,12 +10,20 @@
     <!--[if lt IE 9]>
      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <link href="/css/home.css" rel="stylesheet" type="text/css" />
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="/js/underscore-min.js" type="text/javascript"></script>
+    <script src="/js/async.js" type="text/javascript"></script>
     <script src="/js/string.utils.js" type="text/javascript"></script>
+    <script src="/js/stream.js" type="text/javascript"></script>
+    <script src="/js/reader.js" type="text/javascript"></script>
+    <script src="/js/reader-swipe.js" type="text/javascript"></script>
+    <script src="/js/home.js" type="text/javascript"></script>
     <script type="text/javascript">
         var g_session_key = "<%=session_key%>";
+        var g_user = <%-JSON.stringify(user)%>;
     </script>
     <script type="text/javascript">
         if( window.location.hash == '#_=_' )
@@ -25,9 +33,10 @@
     </script>
 </head>
 <body>
-    <h1>Home</h1>
-    <hr/>
-    <pre><%=JSON.stringify(user,null,'  ')%></pre>
-    <hr/>
-    <a href='/reader'>Reader</a>
+    <div id='home' class='full_page'>
+        <h1>Home</h1>
+        <p>Hello, <%=user.display_name%></p>
+        <button onclick='showReader();'>Reader</button>
+    </div>
+    <% include frag_reader.html %>
 </body>
