--- a/views/home.html
+++ b/views/home.html
@@ -12,8 +12,9 @@
     <![endif]-->
     <link href="/css/home.css" rel="stylesheet" type="text/css" />
     
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js" type="text/javascript"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="/js/jquery.viewport.js" type="text/javascript"></script>
     <script src="/js/underscore-min.js" type="text/javascript"></script>
     <script src="/js/async.js" type="text/javascript"></script>
     <script src="/js/string.utils.js" type="text/javascript"></script>
