--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -27,7 +27,7 @@ body {
         height: 440px;
         width: 100%;
         overflow: hidden;
-        font-size: 14px;
+        font-size: 16px;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         
         .story_header {
@@ -58,6 +58,36 @@ body {
                 margin-bottom: 0px;
                 text-indent: 10px;
                 text-align: justify;
+            }
+            h1 {
+                margin-top: 0;
+                margin-bottom: 0;
+                font-size: 1.5em;
+                font-weight: bold;
+                line-height: 200%;
+            }
+            h2 {
+                margin-top: 0;
+                margin-bottom: 0;
+                font-size: 1em;
+                font-weight: bold;
+                line-height: 100%;
+            }
+            sup {
+                display: inline-block;
+                vertical-align: top;
+                font-size: smaller;
+                text-align: left;
+                text-indent: 0px;
+                margin-top: -0.3em;
+            }
+            sub {
+                display: inline-block;
+                vertical-align: bottom;
+                font-size: smaller;
+                text-align: left;
+                text-indent: 0px;
+                margin-bottom: -0.3em;
             }
         }
         .spacer {
@@ -196,7 +226,7 @@ body {
         bottom: 0px;
         left: 0px;
         right: 0px;
-        height: 93px;
+        height: 44px;
         background: whitesmoke;
         
         .icon_bar {
@@ -206,7 +236,7 @@ body {
             right: 0px;
             height: 43px;
             border-top: 1px solid #bbb;
-            border-bottom: 1px solid #bbb;
+            /* border-bottom: 1px solid #bbb; */
             font-size: 0px;
             text-align: center;
             
