--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -382,22 +382,23 @@ body {
             }
         }
     }
-
-    .theme_standard #story_body {
-        font-family: "Georgia", serif;
-    }
-    .theme_helvetica #story_body {
-        font-family: "Helvetica", sans-serif;
-    }
-    .theme_baskerville #story_body {
-        font-family: "Baskerville", serif;
-    }
-    .theme_palatino #story_body {
-        font-family: "Palatino", serif;
-    }
-    body.theme_midnight {
-        background: black;
-
+}
+.theme_standard #story_body {
+    font-family: "Georgia", serif;
+}
+.theme_helvetica #story_body {
+    font-family: "Helvetica", sans-serif;
+}
+.theme_baskerville #story_body {
+    font-family: "Baskerville", serif;
+}
+.theme_palatino #story_body {
+    font-family: "Palatino", serif;
+}
+body.theme_midnight {
+    background: black;
+    
+    #reader {
         #story_body {
             font-family: "Georgia", serif;
             color: white;
