--- a/views/fail.html
+++ b/views/fail.html
@@ -25,4 +25,5 @@
     <h1>Oops!</h1>
     <hr/>
     <p>Something appears to be working sub-optimally.  Must be gremlins.</p>
+    <% include frag_ga.html %>
 </body>
