--- a/views/home.html
+++ b/views/home.html
@@ -40,4 +40,5 @@
         <button onclick='showReader();'>Reader</button>
     </div>
     <% include frag_reader.html %>
+    <% include frag_ga.html %>
 </body>
