--- a/views/index.html
+++ b/views/index.html
@@ -19,4 +19,6 @@
     <h1>Welcome to bluewell</h1>
     <hr/>
     <a href='/auth/facebook'>Login with Facebook</a>
+
+    <% include frag_ga.html %>
 </body>
