--- a/views/waitlist.html
+++ b/views/waitlist.html
@@ -26,4 +26,5 @@
     <hr/>
     <p>Thanks for signing up for the waitlist.  You'll receive an email when your
     account is activated.</p>
+    <% include frag_ga.html %>
 </body>
