--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -66,7 +66,7 @@ body {
                 font-weight: bold;
                 line-height: 200%;
             }
-            h2 {
+            h2,h3 {
                 margin-top: 0;
                 margin-bottom: 0;
                 font-size: 1em;
