--- a/views/frag_reader.html
+++ b/views/frag_reader.html
@@ -4,7 +4,7 @@
         </div>
     </div>
     <div id='top_bar'>
-        <div class='title_bar'>
+        <div class='title_bar' onclick='clickTitleBar();'>
             <div class='current_title'></div>
         </div>
         <div class='nav_bar'>
