--- a/views/home.html
+++ b/views/home.html
@@ -18,10 +18,13 @@
     <script src="/js/underscore-min.js" type="text/javascript"></script>
     <script src="/js/async.js" type="text/javascript"></script>
     <script src="/js/string.utils.js" type="text/javascript"></script>
+    <script src="/js/common.js" type="text/javascript"></script>
+
     <script src="/js/stream.js" type="text/javascript"></script>
     <script src="/js/reader.js" type="text/javascript"></script>
     <script src="/js/reader-swipe.js" type="text/javascript"></script>
     <script src="/js/home.js" type="text/javascript"></script>
+
     <script type="text/javascript">
         var g_session_key = "<%=session_key%>";
         var g_user = <%-JSON.stringify(user)%>;
