--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -13,34 +13,58 @@ body {
         position: absolute;
         top: 0px;
         bottom: 0px;
-        left: 10px;
-        right: 10px;
+        left: 0px;
+        right: 0px;
+        padding-top: 10px;
+        padding-bottom: 10px;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
+        
+        
     }
 
     #story_body {
         position: absolute;
         left: 0px;
-        padding: 0px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        padding-left: 10px;
+        padding-right: 10px;
         margin-top: 10px;
         margin-bottom: 10px;
         height: 440px;
-        width: 100%;
         overflow: hidden;
         font-size: 16px;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         
+        @media (min-width:700px) {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        @media (min-width:800px) {
+            padding-left: 30px;
+            padding-right: 30px;
+        }
+        @media (min-width:1100px) {
+            padding-left: 60px;
+            padding-right: 60px;
+        }
+        
         .story_header {
             h1 {
                 margin: 0px;
+                font-size: 1.5em;
+                font-weight: bold;
                 padding-top: 20px;
-                padding-bottom: 20px;
+                line-height: 125%;
                 text-align: center;
             }
             h2 {
                 margin: 0px;
                 padding-top: 10px;
-                padding-bottom: 10px;
+                font-size: 1.25em;
+                font-weight: bold;
+                padding-top: 20px;
+                line-height: 125%;
                 text-align: center;
             }
             .authors {
@@ -425,5 +449,16 @@ body.theme_midnight {
                 }
             }
         }
+    }
+}
+
+body.ipad #reader #story_body_container {
+    @media (orientation:landscape) {
+        bottom: 20px;
+    }
+}
+body.iphone #reader #story_body_container {
+    @media (orientation:landscape) {
+        bottom: 108px;
     }
 }
