--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/js/string.utils.js" type="text/javascript"></script>
+    <script src="/js/common.js" type="text/javascript"></script>
 </head>
 <body>
     <h1>Welcome to bluewell</h1>
