--- a/views/reader.html
+++ b/views/reader.html
@@ -17,6 +17,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/js/string.utils.js" type="text/javascript"></script>
+    <script src="/js/common.js" type="text/javascript"></script>
+
     <script src="/js/reader-swipe.js" type="text/javascript"></script>
     <script src="/js/reader.js" type="text/javascript"></script>
     <script type="text/javascript">
