--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -13,13 +13,24 @@ body {
         position: absolute;
         top: 0px;
         bottom: 0px;
-        left: 0px;
-        right: 0px;
+        left: 10px;
+        right: 10px;
         padding-top: 10px;
         padding-bottom: 10px;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         
-        
+        @media (min-width:700px) {
+            left: 20px;
+            right: 20px;
+        }
+        @media (min-width:800px) {
+            left: 30px;
+            right: 30px;
+        }
+        @media (min-width:1100px) {
+            left: 60px;
+            right: 60px;
+        }
     }
 
     #story_body {
@@ -27,27 +38,15 @@ body {
         left: 0px;
         padding-top: 0px;
         padding-bottom: 0px;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 0px;
+        padding-right: 0px;
         margin-top: 10px;
         margin-bottom: 10px;
         height: 440px;
+        width: 100%;
         overflow: hidden;
         font-size: 16px;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
-        
-        @media (min-width:700px) {
-            padding-left: 20px;
-            padding-right: 20px;
-        }
-        @media (min-width:800px) {
-            padding-left: 30px;
-            padding-right: 30px;
-        }
-        @media (min-width:1100px) {
-            padding-left: 60px;
-            padding-right: 60px;
-        }
         
         .story_header {
             h1 {
