--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -75,7 +75,7 @@ body {
             }
         }
         
-        .text {
+        .styled_text {
             p {
                 margin-top: 0px;
                 margin-bottom: 0px;
