--- a/views/frag_reader.html
+++ b/views/frag_reader.html
@@ -29,9 +29,24 @@
     <div id='bottom_bar'>
         <div class='icon_bar'>
             <div class='icon text_settings' onclick='clickTextSettings();'><div class='text'>Aa</div></div>
-            <div class='icon rate'><div class='text'>R</div></div>
-            <div class='icon highlights'><div class='text'>H</div></div>
-            <div class='icon settings'><div class='text'>S</div></div>
+            <div class='icon rate'>
+                <svg enable-background="new 0 0 50 50" height="50px" id="Layer_1" version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
+                    <polygon fill="none" points="25,3.553 30.695,18.321 46.5,19.173   34.214,29.152 38.287,44.447 25,35.848 11.712,44.447 15.786,29.152 3.5,19.173 19.305,18.321 " stroke="#000000" stroke-miterlimit="10" stroke-width="2"/>
+                </svg>
+            </div>
+            <div class='icon highlights'>
+                <svg enable-background="new 0 0 50 50" height="50px" id="Layer_1" version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
+                    <path d="  M29,43c-2.209,0-4,1.806-4,4V10c0-2.209,1.791-4,4-4h16c2.209,0,4,1.791,4,4v29c0,2.209-1.791,4-4,4H29z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+                    <path d="  M21,43c2.209,0,4,1.806,4,4V10c0-2.209-1.791-4-4-4H5c-2.209,0-4,1.791-4,4v29c0,2.209,1.791,4,4,4H21z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+                </svg>
+            </div>
+            <div class='icon settings'>
+                <svg enable-background="new 0 0 50 50" height="50px" id="Layer_1" version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
+                    <polyline fill="none" points="17,10 25,2 33,10" stroke="#000000" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/>
+                    <line fill="none" stroke="#000000" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" x1="25" x2="25" y1="32" y2="2.333"/>
+                    <path d="M17,17H8v32h34V17h-9" fill="none" stroke="#000000" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/>
+                </svg>
+            </div>
         </div>
         <div class='tracker_bar'>
         </div>
