--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -107,6 +107,9 @@ body {
         }
         
         .story_header, .text, .author_notes {
+            padding-left: 10px;
+            padding-right: 10px;
+            
             @media (min-width:700px) {
                 padding-left: 20px;
                 padding-right: 20px;
