--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -205,12 +205,6 @@ body {
                     
                     path {
                         fill: @icon_inactive;
-                        transform: rotate(180deg);
-                        transform-origin: 50%;
-                        -ms-transform: rotate(180deg);
-                        -ms-transform-origin: 50%;
-                        -webkit-transform: rotate(180deg);
-                        -webkit-transform-origin: 50%;
                     }
                 }
                 &.active {
@@ -233,12 +227,6 @@ body {
                     
                     path {
                         fill: @icon_inactive;
-                        transform: rotate(180deg);
-                        transform-origin: 50%;
-                        -ms-transform: rotate(180deg);
-                        -ms-transform-origin: 50%;
-                        -webkit-transform: rotate(180deg);
-                        -webkit-transform-origin: 50%;
                     }
                 }
                 &.active {
@@ -447,7 +435,7 @@ body {
     font-family: "Georgia", serif;
 }
 .theme_helvetica #story_body {
-    font-family: "Helvetica", sans-serif;
+    font-family: "Helvetica", "Ariel", sans-serif;
 }
 .theme_baskerville #story_body {
     font-family: "Baskerville", "Libre Baskerville", serif;
