--- a/views/frag_reader.html
+++ b/views/frag_reader.html
@@ -15,13 +15,15 @@
             </div>
             <div class='next' onclick='readerNext();'>
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="42px" viewBox="0 0 22 42" enable-background="new 0 0 22 42" xml:space="preserve">
-                    <path stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="null" d="m20.51,41.02l1.97917,-2.182011l-18.33801,-18.19944l18.402268,-18.402301l-2.04343,-2.236249l-16.409999,16.41l-4.1,4.099998l4.1,4.1l0,0" fill="#157DFB"/>
+                    <path transform="rotate(180 11.2767 20.4992)" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="null" d="m20.51,41.02l1.97917,-2.182011l-18.33801,-18.19944l18.402268,-18.402301l-2.04343,-2.236249l-16.409999,16.41l-4.1,4.099998l4.1,4.1l0,0" fill="#157DFB"/>
                 </svg>
             </div>
             <div class='fast_forward'  onclick='readerFastForward();'>
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="39px" height="42px" viewBox="0 0 39 42" enable-background="new 0 0 39 42" xml:space="preserve">
-                    <path fill="#157DFB" d="m20.510004,41.02l1.97917,-2.182011l-18.338011,-18.199438l18.402267,-18.402303l-2.04343,-2.236249l-16.41,16.41l-4.1,4.099998l4.1,4.1c0,0 0,0 0,0" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" />
-                    <path fill="#157DFB" d="m36.533291,41.020004l1.979168,-2.182011l-18.338009,-18.199442l18.402267,-18.402302l-2.04343,-2.236249l-16.41,16.409999l-4.1,4.099998l4.1,4.1c0,0 0,0 0,0" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null"/>
+                    <g transform="rotate(180 19.2884 20.51)">
+                        <path fill="#157DFB" d="m20.510004,41.02l1.97917,-2.182011l-18.338011,-18.199438l18.402267,-18.402303l-2.04343,-2.236249l-16.41,16.41l-4.1,4.099998l4.1,4.1c0,0 0,0 0,0" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" />
+                        <path fill="#157DFB" d="m36.533291,41.020004l1.979168,-2.182011l-18.338009,-18.199442l18.402267,-18.402302l-2.04343,-2.236249l-16.41,16.409999l-4.1,4.099998l4.1,4.1c0,0 0,0 0,0" stroke-width="null" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null"/>
+                    </g>
                 </svg>
             </div>
         </div>
