--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -19,7 +19,6 @@ body {
         padding-top: 10px;
         padding-bottom: 10px;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
-        
     }
 
     #story_body {
@@ -442,6 +441,9 @@ body {
 }
 .theme_palatino #story_body {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", "Quattrocento", serif;
+}
+.theme_roboto #story_body {
+    font-family: "Roboto Slab", serif;
 }
 body.theme_midnight {
     background: black;
