--- a/views/frag_reader.html
+++ b/views/frag_reader.html
@@ -1,6 +1,19 @@
 <div id='reader'>
     <div id='story_body_container'>
         <div id='story_body'>
+            <div class='story_header'>
+                <h1 class='story_title'></h1>
+                <div class='authors'>
+                    <div class='by'>By:</div>
+                    <div class='author_list'></div>
+                </div>
+            </div>
+            <div class='text styled_text'></div>
+            <div class='author_notes styled_text'></div>
+            <div class='spacer'></div>
+            <div class='end_story_page'>
+                
+            </div>
         </div>
     </div>
     <div id='top_bar'>
@@ -76,7 +89,7 @@
             <div class='item theme_helvetica' onclick="clickTheme('theme_helvetica');">
                 <div class='outer'>
                     <div class='inner'>
-                        <img src="/images/theme_standard.jpg"/>
+                        <img src="/images/theme_helvetica.jpg"/>
                     </div>
                 </div>
                 <div class='label'>Helvetica</div>
@@ -84,7 +97,7 @@
             <div class='item theme_baskerville' onclick="clickTheme('theme_baskerville');">
                 <div class='outer'>
                     <div class='inner'>
-                        <img src="/images/theme_standard.jpg"/>
+                        <img src="/images/theme_baskerville.jpg"/>
                     </div>
                 </div>
                 <div class='label'>Baskerville</div>
@@ -92,15 +105,23 @@
             <div class='item theme_palatino' onclick="clickTheme('theme_palatino');">
                 <div class='outer'>
                     <div class='inner'>
-                        <img src="/images/theme_standard.jpg"/>
+                        <img src="/images/theme_palatino.jpg"/>
                     </div>
                 </div>
                 <div class='label'>Palatino</div>
             </div>
+            <div class='item theme_roboto' onclick="clickTheme('theme_roboto');">
+                <div class='outer'>
+                    <div class='inner'>
+                        <img src="/images/theme_roboto.jpg"/>
+                    </div>
+                </div>
+                <div class='label'>Roboto</div>
+            </div>
             <div class='item theme_midnight' onclick="clickTheme('theme_midnight');">
                 <div class='outer'>
                     <div class='inner'>
-                        <img src="/images/theme_standard.jpg"/>
+                        <img src="/images/theme_midnight.jpg"/>
                     </div>
                 </div>
                 <div class='label'>Midnight</div>
