--- a/views/frag_reader.html
+++ b/views/frag_reader.html
@@ -1,18 +1,7 @@
 <div id='reader'>
     <div id='story_body_container'>
         <div id='story_body'>
-            <div class='story_header'>
-                <h1 class='story_title'></h1>
-                <div class='authors'>
-                    <div class='by'>By:</div>
-                    <div class='author_list'></div>
-                </div>
-            </div>
-            <div class='text styled_text'></div>
-            <div class='author_notes styled_text'></div>
-            <div class='spacer'></div>
-            <div class='end_story_page'>
-                
+            <div id='paged_story'>
             </div>
         </div>
     </div>
