--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -5,6 +5,9 @@
 body {
     margin: 0;
     padding: 0;
+    &.iphone {
+        -webkit-text-size-adjust: none;
+    }
 }
 
 #reader {
@@ -23,66 +26,95 @@ body {
 
     #story_body {
         position: absolute;
+        top: 0px;
         left: 0px;
+        bottom: 0px;
         padding-top: 0px;
         padding-bottom: 0px;
         padding-left: 0px;
         padding-right: 0px;
         margin-top: 10px;
         margin-bottom: 10px;
-        height: 440px;
         width: 100%;
         overflow: hidden;
         font-size: 16px;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         
-        .story_header {
-            h1 {
-                margin: 0px;
-                font-size: 1.5em;
-                font-weight: bold;
-                padding-top: 20px;
-                line-height: 125%;
-                text-align: center;
-            }
-            h2 {
-                margin: 0px;
-                padding-top: 10px;
-                font-size: 1.25em;
-                font-weight: bold;
-                padding-top: 20px;
-                line-height: 125%;
-                text-align: center;
-            }
-            .authors {
-                text-align: center;
-                padding-bottom: 10px;
-                .by {
-                    font-weight: bold;
-                }
-            }
+        #paged_story .pages .full_story {
+            display: none;
         }
+        #paged_story .pages {
+            white-space: nowrap;
+        }
+        .page {
+            display: inline-block;
+            vertical-align: top;
+            white-space: normal;
         
-        .styled_text {
+            padding-left: 10px;
+            padding-right: 10px;
+            @media (min-width:700px) {
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+            @media (min-width:800px) {
+                padding-left: 30px;
+                padding-right: 30px;
+            }
+            @media (min-width:1100px) {
+                padding-left: 60px;
+                padding-right: 60px;
+            }
+        
+            .story_title, .story_subtitle {
+                text-align: center;
+            }
+        
+            .by {
+                padding-top: 10px;
+                padding-bottom: 5px;
+                text-align: center;
+                font-weight: bold;
+            }
+            .author {
+                padding-bottom: 3px;
+                text-align: center;
+            }
+        
             p {
                 margin-top: 0px;
                 margin-bottom: 0px;
                 text-indent: 10px;
                 text-align: justify;
+                
+                @media (min-width:700px) {
+                    text-indent: 20px;
+                }
+                
+                &.split:after {
+                    display: inline-block;
+                    content: ".";
+                    width: 100%;
+                    height: 0;
+                    visibility: hidden;
+                }
+                &.after_split {
+                    text-indent: 0px;
+                }
             }
             h1 {
-                margin-top: 0;
-                margin-bottom: 0;
+                margin-top: 5px;
+                margin-bottom: 5px;
                 font-size: 1.5em;
                 font-weight: bold;
-                line-height: 200%;
+                line-height: 1.5em;
             }
             h2,h3 {
-                margin-top: 0;
-                margin-bottom: 0;
+                margin-top: 8px;
+                margin-bottom: 8px;
                 font-size: 1em;
                 font-weight: bold;
-                line-height: 100%;
+                line-height: 1em;
             }
             sup {
                 display: inline-block;
@@ -101,25 +133,9 @@ body {
                 margin-bottom: -0.3em;
             }
         }
-        .spacer {
-            height: 440px;
-        }
-        
-        .story_header, .text, .author_notes {
-            padding-left: 10px;
-            padding-right: 10px;
-            
-            @media (min-width:700px) {
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-            @media (min-width:800px) {
-                padding-left: 30px;
-                padding-right: 30px;
-            }
-            @media (min-width:1100px) {
-                padding-left: 60px;
-                padding-right: 60px;
+        .end_story_page {
+            .top_box {
+                width: 100%;
             }
         }
     }
