--- a/views/home.html
+++ b/views/home.html
@@ -29,6 +29,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/js/jquery.viewport.js" type="text/javascript"></script>
+    <script src="/js/ejs_production.js" type="text/javascript"></script>
     <script src="/js/underscore-min.js" type="text/javascript"></script>
     <script src="/js/async.js" type="text/javascript"></script>
     <script src="/js/string.utils.js" type="text/javascript"></script>
